--- a/MstatReader.WebUI/wwwroot/index.html
+++ b/MstatReader.WebUI/wwwroot/index.html
@@ -8,8 +8,7 @@
     <link href="css/app.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
 
-    <!-- If you add any scoped CSS files, uncomment the following to load them
-    <link href="MstatReader.WebUI.styles.css" rel="stylesheet" /> -->
+    <link href="MstatReader.WebUI.styles.css" rel="stylesheet" />
 </head>
 
 <body>
